--- a/fonts/font.css
+++ b/fonts/font.css
@@ -66,3 +66,31 @@ src: url('fonts/Gilroy-Light.woff2') format('woff2'),
         url('fonts/Gilroy-Light.woff') format('woff');
 
 }
+
+@font-face {
+	font-family: 'roboto';
+font-weight: 700;
+font-style: normal;
+src: url('roboto/Roboto-Bold.ttf') format('truetype'),
+	url('roboto/Roboto-Bold.woff') format('woff'),
+	url('roboto/Roboto-Bold.woff2') format('woff2');
+
+}
+@font-face {
+	font-family: 'roboto';
+font-weight: 500;
+font-style: normal;
+src: url('roboto/Roboto-Medium.ttf') format('truetype'),
+	url('roboto/Roboto-Medium.woff') format('woff'),
+	url('roboto/Roboto-Medium.woff2') format('woff2');
+
+}
+@font-face {
+	font-family: 'roboto';
+font-weight: 700;
+font-style: normal;
+src: url('roboto/Roboto-Regular.ttf') format('truetype'),
+	url('roboto/Roboto-Regular.woff') format('woff'),
+	url('roboto/Roboto-Regular.woff2') format('woff2');
+
+}
