--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
     margin: 0;
     position: relative;
     padding: 0;
-    font-family: Roboto, sans-serif;
+    font-family: "open-sans", sans-serif;
     background: #fff;
     font-weight: 400;
     font-size: 24px;
