--- a/css/style.css
+++ b/css/style.css
@@ -2016,7 +2016,7 @@ textarea:focus:-ms-input-placeholder {
 }
 
 body {
-    font-family: Roboto, "Open sans", "Segoe UI", "Segoe WP", Helvetica, Arial, sans-serif;
+    font-family:  "Open sans", "Segoe UI", "Segoe WP", Helvetica, Arial, sans-serif;
     color: #777
 }
 
