--- a/css/style.css
+++ b/css/style.css
@@ -791,6 +791,7 @@ textarea:focus:-ms-input-placeholder {
     background: url(../images/new/new-background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    margin-bottom: 30px;
 }
 
 .tarif_date {
@@ -1157,7 +1158,9 @@ textarea:focus:-ms-input-placeholder {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    flex-direction: column
+    flex-direction: column;
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 .tarif .head {
@@ -1183,7 +1186,7 @@ textarea:focus:-ms-input-placeholder {
 
 .tarif .main {
     background-color: #fff;
-    padding: 17px 35px 25px;
+    padding: 17px 20px 25px;
     -webkit-box-flex: 1;
     -ms-flex-positive: 1;
     flex-grow: 1
@@ -1227,7 +1230,7 @@ textarea:focus:-ms-input-placeholder {
 }
 
 .tarif .main .item .name {
-    color: #1c9546;
+    color: #00B0AA;
     font-family: Roboto;
     font-size: 14px;
     font-weight: 400
@@ -1237,7 +1240,7 @@ textarea:focus:-ms-input-placeholder {
     font-family: Roboto;
     color: #454545;
     font-family: Roboto;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 400
 }
 
@@ -2016,7 +2019,7 @@ textarea:focus:-ms-input-placeholder {
 }
 
 body {
-    font-family:  "Open sans", "Segoe UI", "Segoe WP", Helvetica, Arial, sans-serif;
+    font-family: "Open sans", "Segoe UI", "Segoe WP", Helvetica, Arial, sans-serif;
     color: #777
 }
 
